--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Əmlak Siğorta</title>
 </head>
 <body>
-    
+    <div class="main__container">
+        <!---logo ebanoye--->
+        <div class="language__logo">
+                <div class="logo__container">
+                    <a href="#">
+                        <img src="./Logo.svg" alt="">
+                    </a>
+                </div>
+        </div>
+
+
+
+    </div>
 </body>
 </html>
