--- a/index.html
+++ b/index.html
@@ -9,17 +9,44 @@
 </head>
 <body>
     <div class="main__container">
-        <!---logo ebanoye--->
+
         <div class="language__logo">
                 <div class="logo__container">
                     <a href="#">
                         <img src="./Logo.svg" alt="">
                     </a>
                 </div>
+
+                <div class="language__container">
+                    <a  href="#" class="language_element">
+                        AZ
+                    </a>
+                    <a  href="#" class="language_element">
+                        EN
+                    </a>
+                    <a  href="#" class="language_element">
+                        RU
+                    </a>
+                </div>
+        </div>
+
+
+
+        <div class="main__container__desc">
+            <p>
+                Əmlak Sığortası üçün müraciət
+            </p>
         </div>
 
 
 
     </div>
+    <!----CREATED BY DENIS AKERSHTEYN
+  ///////////////////////////////////
+  https://www.linkedin.com/in/denis-akershteyn-985358197/
+  https://github.com/dakerdenis/
+  ///////////////////////////////////
+  for connecting https://daker.site/ 
+  -------->
 </body>
 </html>
