--- a/index.html
+++ b/index.html
@@ -37,7 +37,32 @@
                 Əmlak Sığortası üçün müraciət
             </p>
         </div>
+        
 
+        <div class="main__container__form">
+            <form action="">
+                <div class="form__desc">
+                    <p>Müştəri məlumatları</p>
+                </div>
+
+                <div class="form__input__container">
+                    <input type="text" id="name" placeholder="Ad">
+                </div>
+                <div class="form__input__container">
+                    <input type="text" id="surname"  placeholder="Soyad">
+                </div>
+                <div class="form__input__container">
+                    <input type="text" id="number"  placeholder="Əlaqə nömrəsi">
+                </div>
+                <div class="form__input__container_textarea">
+                    <textarea name="message" id="message"></textarea>
+                </div>
+
+                <div class="form__button">
+                    <input type="submit" value="Müraciyət Et">
+                </div>
+            </form>
+        </div>
 
 
     </div>
